# cilver

./: CMakeLists.txt  Dockerfile  cilver.sln  sharp.sln
.github/workflows/: build.yml  docker-ubuntu.yml
cilver-cli/: cilver-cli.csproj
cilver-lib/: Class1.cs  cilver-lib.csproj
integration-test/: lit.cfg.py  lit.site.cfg.py.in
integration-test/cilver-cli/smoke_test/: dummy.test
integration-test/sharp-cli/smoke_test/: dummy.test
sharp-cli/: sharp-cli.csproj
sharp-lib/: Class1.cs  sharp-lib.csproj
unit-test/: UnitTest1.cs  unit-test.csproj
